<resources>
    <string name="app_name">BillPlease</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="svs_off">NO SVS</string>
    <string name="svs_on">SVS</string>
    <string name="gst_off">NO GST</string>
    <string name="gst_on">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="reset">RESET</string>
    <string name="split">SPLIT</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pays">Each Person Pays:</string>
</resources>